# PCSC_project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  main.h
Source/: CSVReader.cpp  ConsoleWriter.cpp  Eigenvalue.cpp  FileWriter.cpp  Parameters.cpp  PlotWriter.cpp  PowerMethod.cpp  QRMethod.cpp  Reader.cpp  ShiftedInversePowerMethod.cpp  TextFileReader.cpp  Writer.cpp  test_QRMethod.cpp  test_ShiftInversepm.cpp  test_powermethod.cpp  test_reader.cpp
_codeql_build_dir/: CTestTestfile.cmake
data/: result.txt  result_complex.csv  test_main.txt  test_matrix_power.csv  test_matrix_power.txt  test_matrix_qr.txt  test_matrix_shift.txt
docs/html/: _c_s_v_reader_8cpp.html  _c_s_v_reader_8h.html  _c_s_v_reader_8h.js  _c_s_v_reader_8h_source.html  _console_writer_8cpp.html  _console_writer_8h.html  _console_writer_8h.js  _console_writer_8h_source.html  _eigenvalue_8cpp.html  _eigenvalue_8h.html  _eigenvalue_8h.js  _eigenvalue_8h_source.html  _parameters_8cpp.html  _parameters_8h.html  _parameters_8h.js  _parameters_8h_source.html  _plot_writer_8cpp.html  _plot_writer_8h.html  _plot_writer_8h.js  _plot_writer_8h_source.html  _power_method_8cpp.html  _power_method_8h.html  _power_method_8h.js  _power_method_8h_source.html  _q_r_method_8cpp.html  _q_r_method_8h.html  _q_r_method_8h.js  _q_r_method_8h_source.html  _reader_8cpp.html  _reader_8h.html  _reader_8h.js  _reader_8h_source.html  _shifted_inverse_power_method_8cpp.html  _shifted_inverse_power_method_8h.html  _shifted_inverse_power_method_8h.js  _shifted_inverse_power_method_8h_source.html  _text_file_reader_8cpp.html  _text_file_reader_8h.html  _text_file_reader_8h.js  _text_file_reader_8h_source.html  (+75 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+11 more)
header/: CSVReader.h  ConsoleWriter.h  Eigenvalue.h  FileWriter.h  Parameters.h  PlotWriter.h  PlotWritter.h  PowerMethod.h  QRMethod.h  Reader.h  ShiftedInversePowerMethod.h  TestFileReader.h  TextFileReader.h  Writer.h
include/: jacobi_method.h  matrix.h  power_method.h  qr_algorithm.h
src/: jacobi_method.cpp  main.cpp  matrix.cpp  power_method.cpp  qr_algorithm.cpp
tests/: test_main.cpp
